# G3GS

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: Footer.tsx
migrations/: 001_create_shortlinks_table.sql
src/: database.rs  id_encoder.rs  main.rs  models.rs  queue.rs  redis_client.rs  service.rs
