[package]
name = "G3GS"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
redis = { version = "0.27.5", features = ["tokio-comp", "connection-manager"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
dotenv = "0.15.0"
